lab1/Test/L1-A-11-18.cmm
int GKUsT5UBWMz ( ) {
  int Xb while ;
*   float n3M3XWiwd469SOkX , dZL8ZTlfZd6qWBmDc7k [ 
    1757993088 ] = nLVRLAx2Wzk = _OxnEYl < Savs_4v4I0mSgYCZrW 
    - n9APsJ5gnGjA / fV_Jgr ( vCp , dnMMILkNWVw8cc5 = 
    d5IPqQgiN_U || UlBdmd7ViSyyhlZCLfdi && er1ojYwkrnS3wdC 
    >= vW + YKSnQ * bTrSQ79Oj8w9NMUhT [ _J35Bv58iXRpX0uA 
    <= DMv2dYDjdaunhJuUr ( ! ! ( lENhgHV || jfCm_5IQgcyK1suhLq 
    == y4gGK3At60FFNSM [ && R6z_7zhfgkC > 1534464027.350524578 
    ] > ! 1488993201 ) ) != GFglCutZbvuMTKX ] == - ! - 
    ! KlnFjutNTPSw ( ) . A047kFXb2O ) ;
}
struct T422C {
};
int ZQeDAe85 
;
struct RxuTA7mpbpio oT , lRhn49H1oE 

;
struct Ygk 
int UF0V7q3oAB0ky1 ( ) {
  if eUos )   n ;
else   L4q2RNncGR6PG28V ;

  if ( sZZvszx_5B0Vc ) {
  }else   if ( Em6MqPtiAWPp )   while D5CS3xsRpsJEGiWuSmW 
    )   Hijlsy ;



}
int GUwCBwXTWnEL3s ( int t_S0ceR2HhNCaqqow , int IYqV3rkffhYij7y 
  ) else {
  return ZgPxpVfdEJAwz2 ;
}
struct {
;
struct GrzVIRvBFw6ElEQNOdsa ;
int ;
int ;
